# journaltk

./: MANIFEST.in  README.md  requirements.txt  setup.cfg
journaltk/: __init__.py  api.py  utils.py
journaltk/abbrev/: custom_journals.json
journaltk/journals_abbrev/: README.md
